# vorticidad-cosmica

./: CONTROL_VORTICITY_VS_DENSITY.py  CORRECTED_VORTICITY_MODEL.py  DIAGNOSTICO_FUSION_FISICA_SUBSAMPLING.py  FINAL_DESI_THRESHOLD_TUNING.py  FINAL_VERIFICATION_COMPLETE.py  MCMC_DIAGNOSTICS_DESI_REAL.py  MCMC_DUAL_FINAL.py  QUANTIFICATION_BIAS_VALID-v5.py  README.md  REAL_VORTICITY_DESI_FINAL_CALIBRATION.py  REGENERATE_DATOS_ROBUSTEZ_REAL-v5.py  RESOLVED_TENSION_ANALYSIS_CORRECTED.py  SDSS_VS_DESI_QUALITY_ANALYSISv4.py  SPATIAL_VALIDATION_JACKKNIFE.py  STATISTICAL_COMPARISON_FINAL_DESI_REAL.py  TEST_SHUFLE_VDISP.py  TOMOGRAPHIC_VORTICITY.py  VALIDATE_DESI_MCMC_CONSISTENCY.py  VALIDATION_SUBSAMPLES_REAL_VORTICITY.py  VORTICITY_CORRECTED_BIAS.py  VORTICITY_VS_DARK_MATTER_CORRECTED.py  VPM_SCIENTIFIC.py  paper_nanograv_fixed5.py  vpm_rust_recreation.rs
data/: Rm.rm
rust/: Cargo.toml  pyproject.toml
rust/src/: fdtd_solver.rs  fft_wrapper.rs  lib.rs  physics.rs
